[package]
name = "archivio"
version = "0.5.0"
authors = ["Riccardo Casatta <riccardo@casatta.it>"]
edition = "2018"
description = "Based on the content of the Files directory creates a Tags directory with symbolic links to original content. Files should follow the naming convention AAAA-MM-DD[_Tags]+"
license = "MIT"
repository = "https://github.com/RCasatta/archivio"
keywords = ["archive", "links", "tags", "files"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
